--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,4 +1,7 @@
-set -g default-terminal "screen-256color"
+# set -g default-terminal "screen-256color"
+# set-option -ga terminal-overrides ",xterm-256color:Tc"
+set  -g default-terminal "tmux-256color"
+set -ag terminal-overrides ",xterm-256color:RGB"
 
 unbind r
 bind r source-file ~/.tmux.conf
