--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,7 +1,7 @@
-# set -g default-terminal "screen-256color"
-# set-option -ga terminal-overrides ",xterm-256color:Tc"
-set  -g default-terminal "tmux-256color"
-set -ag terminal-overrides ",xterm-256color:RGB"
+set -g default-terminal "screen-256color"
+set-option -ga terminal-overrides ",xterm-256color:Tc"
+# set  -g default-terminal "tmux-256color"
+# set -ag terminal-overrides ",xterm-256color:RGB"
 
 unbind r
 bind r source-file ~/.tmux.conf
@@ -31,11 +31,10 @@ set -g mouse on
 set -g @plugin 'tmux-plugins/tpm'
 
 set -g @plugin 'christoomey/vim-tmux-navigator'
-set -g @plugin 'egel/tmux-gruvbox'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @plugin 'tmux-plugins/tmux-continuum'
-
+set -g @plugin 'egel/tmux-gruvbox'
 set -g @tmux-gruvbox 'dark' # or 'light'
+
 set -g @ressurrect-capture-pane-contents 'on'
 set -g @continuum-restore 'on'
 
