--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,15 +2,20 @@ set -g default-terminal "screen-256color"
 set-option -ga terminal-overrides ",xterm-256color:Tc"
 # set  -g default-terminal "tmux-256color"
 # set -ag terminal-overrides ",xterm-256color:RGB"
+set -g prefix C-space
+unbind-key C-b
+bind-key C-space send-prefix
 
 unbind r
 bind r source-file ~/.tmux.conf
 
+bind c new-window -c "#{pane_current_path}"
+
 unbind %
-bind + split-window -h
+bind + split-window -h -c "#{pane_current_path}"
 
 unbind '"'
-bind - split-window -v
+bind - split-window -v -c "#{pane_current_path}"
 
 bind -r h resize-pane -L 5
 bind -r j resize-pane -D 5
