added other stuff to symlink

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -41,6 +41,7 @@ set -g @plugin 'egel/tmux-gruvbox'
 set -g @tmux-gruvbox 'dark' # or 'light'
 
 set -g @ressurrect-capture-pane-contents 'on'
+set -g @resurrect-strategy-nvim 'session'
 set -g @continuum-restore 'on'
 
 run '~/.tmux/plugins/tpm/tpm'
